# NGen

./: CMakeLists.txt  README.md  imgui.ini
include/glad/: glad.h
shaders/: frag.glsl  pbrfrag.glsl  pbrvert.glsl  skybox.frag.glsl  skybox.vert.glsl  vert.glsl
shaders/basic/: frag.glsl  vert.glsl
shaders/deferred/: blur.frag.glsl  deferred.frag.glsl  gbuffer.frag.glsl  gbuffer.vert.glsl  lighting.frag.glsl  lighting.vert.glsl
shaders/glint_noise_init/: gnoiseinit.frag.glsl  gnoiseinit.vert.glsl
shaders/hdr/: envCubeMap.frag.glsl  envCubeMap.vert.glsl
shaders/pbr/: brdfLUT.frag.glsl  brdfLUT.vert.glsl  diffuseIrradiance.frag.glsl  pbrfrag.glsl  pbrvert.glsl  specularIrradiance.frag.glsl
shaders/ssao/: ssao.frag.glsl  testSAO.glsl
shaders/ssr/: ssr.frag.glsl
src/: blur.cpp  blur.h  camera.cpp  camera.h  deferred.cpp  deferred.h  glad.c  imgui.ini  main.cpp  mesh.cpp  mesh.h  mesh_renderer.cpp  mesh_renderer.h  mygl.cpp  mygl.h  shader.cpp  shader.h  skybox.cpp  skybox.h  ssao.cpp  ssao.h  texture.cpp  texture.h
src/features/: framebuffer.h  ssr.h
src/geometry/: cube.h  quad.h
